[package]
name = "red-black"
description = "A memory efficient inplementation of red-black tree"
version = "0.1.0"
authors = ["jianghua <5451vs5451@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
